cabal-version:       >=1.10
name: logstf-stats
version: 0.0.1
build-type:          Simple

executable logstf-stats
  main-is:             Logs.hs
  ghc-options:         -threaded
  build-depends:       base,
                       aeson,
		       containers,
		       bytestring,
		       unordered-containers,
		       text,
		       HsOpenSSL,
                       http-streams,
		       optparse-generic,
		       terminal-progress-bar
  default-language:    Haskell2010

